--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                     <li>
                         <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                     </li>
+                    <li>
+                        <a href="#games" title="Ir para a seção de notícias">Games</a>
+                    </li>
+                    <li>
+                        <a href="#tecnology" title="Ir para a seção de notícias">Tecnologia</a>
+                    </li>
                 </ul>
             </nav>
         </section>
@@ -99,7 +105,7 @@
             </article>
         </div>
     </section>
-    <section id="Games" class="container">
+    <section id="games" class="container">
         <h2>Games</h2>
         <div class="articles">
             <article>
