--- a/index.html
+++ b/index.html
@@ -109,33 +109,33 @@
         <h2>Games</h2>
         <div class="articles">
             <article>
-                <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
+                <img src="./imagens/PlayStation 5 Pro.jpeg" alt="PS5 pro" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:22</time>
                 </header>
-                <h3>Dólar em alta de 0.50%</h3>
+                <h3>Sony lança PS5 pro</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
+                <img src="./imagens/legacy of kain.jpeg" alt="Game legacy of kain, soul reaver" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:27</time>
                 </header>
-                <h3>Euro em queda de 0.40%</h3>
+                <h3>Anúncio de novo remaster</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
+                <img src="./imagens/steam.jpeg" alt="Steam" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:30</time>
                 </header>
-                <h3>Alta no preço do barril do petróleo</h3>
+                <h3>Steam anuncia nova política</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
