criação das3 notícias na aba tecnologia, substituição daimagem iphone 16.jpeg e redimencionamento da imagem android.jpeg

--- a/index.html
+++ b/index.html
@@ -147,33 +147,33 @@
         <h2>Tecnologia</h2>
         <div class="articles">
             <article>
-                <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
+                <img src="./imagens/android.jpeg" alt="Mascote do Android" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:47</time>
                 </header>
-                <h3>Dólar em alta de 0.50%</h3>
+                <h3>Android 15 é lançado</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
+                <img src="./imagens/iPhone 16 1.jpeg" alt="Todas as cores do iphone 16" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:49</time>
                 </header>
-                <h3>Euro em queda de 0.40%</h3>
+                <h3>Apple lança Iphone 16</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
+                <img src="./imagens/Zorin os.jpeg" alt="Logo do zorin os" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
+                    <time>18/10/2024 às 20:55</time>
                 </header>
-                <h3>Alta no preço do barril do petróleo</h3>
+                <h3>Lançado o Zorin OS 17.2</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
